--- a/package.json
+++ b/package.json
@@ -15,9 +15,21 @@
   ],
   "author": "Steven Mills",
   "license": "ISC",
+  "dependencies": {
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.1",
+    "hapi": "~7.5.0",
+    "path": "^0.4.9"
+  },
   "devDependencies": {
+	"connect-modrewrite": "^0.7.9",
+    "es5-shim": "^4.0.1",
     "grunt": "^1.0.1",
+	"grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+	"grunt-hapi": "^0.8.1"
   }
 }
